apps/applications/media/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli-ui
  namespace: media
spec:
  selector:
    app: tautulli
  ports:
    - name: web-ui
      port: 8181
