apps/applications/media/tautulli/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli-route
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "tautulli.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tautulli
          port: 8181
