apps/applications/media/tautulli/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tautulli-policy
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app: tautulli
  # ----=== Ingress ===----
  ingress:
    # === Allow access from Traefik ===
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "web-ui"
              protocol: "TCP"
    # === Allow access from other apps ===
    - fromEndpoints:
        - matchLabels:
            app: overseerr
      toPorts:
        - ports:
            - port: "web-ui"
              protocol: "TCP"

  # ----=== Egress ===----
  egress:
    # === Allow DNS ===
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: coredns
      toPorts:
        - ports:
            - port: "53"
              protocol: "UDP"
            - port: "53"
              protocol: "TCP"
    # === Allow access to services ===
    - toServices:
        - k8sService:
            serviceName: plex-ui
            namespace: media
        - k8sService:
            serviceName: ntfy
            namespace: monitoring
    # === Allow access to external for metadata ===
    - toEntities:
        - "world"
      toPorts:
        # Only allow HTTP/S for indexers
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
            - port: "80"
              protocol: TCP
